# ispc-texcomp-rs

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: build_libraries.yml  ci.yml  pr.yml  publish.yml
examples/: encoder.rs  main.rs  rust.dds
src/: astc.rs  bc1.rs  bc3.rs  bc4.rs  bc5.rs  bc6h.rs  bc7.rs  etc1.rs  lib.rs
src/ispc/: ispc_texcomp_astci686-pc-windows-msvc.lib  ispc_texcomp_astcx86_64-pc-windows-msvc.lib  kernel.rs  kernel_astc.rs  kernel_astci686-pc-windows-msvc.lib  kernel_astcx86_64-pc-windows-msvc.lib  kerneli686-pc-windows-msvc.lib  kernelx86_64-pc-windows-msvc.lib
